# EPOS-kassa

./: AUTHORS  CMakeLists.txt  INSTALL  readme.md
src/: Application.vala
src/GUI/: MainWindow.vala
src/GUI/Views/: ProductView.vala
src/GUI/Widgets/: AmountEntry.vala  ArticleNumberEntry.vala  Button.vala  DesciptionLabel.vala
